# druncschema

./: CMakeLists.txt  generate_protos  generate_protos.sh  requirements.txt  setup.cfg  setup.py
cmake/: druncschemaConfig.cmake.in
proto/: authoriser.proto  broadcast.proto  controller.proto  generic.proto  process_manager.proto  request_response.proto
python/druncschema/: __init__.py  controller_pb2_grpc.py  process_manager_pb2.py  process_manager_pb2_grpc.py  request_response_pb2.py
python_not_for_dunedaq/druncschema/: __init__.py  authoriser_pb2.py  authoriser_pb2_grpc.py  broadcast_pb2.py  broadcast_pb2_grpc.py  controller_pb2.py  controller_pb2_grpc.py  generic_pb2.py  generic_pb2_grpc.py  process_manager_pb2.py  process_manager_pb2_grpc.py  request_response_pb2.py  request_response_pb2_grpc.py  session_manager_pb2.py  session_manager_pb2_grpc.py  token_pb2.py  token_pb2_grpc.py
schema/druncschema/: authoriser.proto  broadcast.proto  broadcast_service.proto  controller.proto  generic.proto  process_manager.proto  request_response.proto  session_manager.proto  token.proto
src/: dummy.cpp
src/druncschema/: authoriser_pb2.py  broadcast_pb2.py  broadcast_pb2_grpc.py  controller_pb2.py  controller_pb2_grpc.py  generic_pb2.py  process_manager_pb2.py  process_manager_pb2_grpc.py  request_response_pb2.py  token_pb2.py
