[metadata]
name = druncschema
version = attr: druncschema.__version__
url = https://github.com/DUNE-DAQ/druncschema
long_description = file: docs/README.md
long_description_content_type = text/markdown

[options]
packages = find:
package_dir = =python_not_for_dunedaq
include_package_data = true
python_requires = >= 3.6
# Dependencies are in setup.py for GitHub's dependency graph.

[options.packages.find]
where = python
include_package_data = true
